--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -974,50 +974,50 @@ section {
                                         overflow: hidden;
                                     }
 
-                                    &.tactile_one {
-                                        border-color: #b1f3b3;
-                                        box-shadow: #baffbc -6px -6px 13px,
-                                            #94cb96 6px 6px 13px;
-                                        background: linear-gradient(
-                                            145deg,
-                                            #aaeaac,
-                                            #aeeeb0
-                                        );
-                                    }
+                                    // &.tactile_one {
+                                    //     border-color: #b1f3b3;
+                                    //     box-shadow: #baffbc -6px -6px 13px,
+                                    //         #94cb96 6px 6px 13px;
+                                    //     background: linear-gradient(
+                                    //         145deg,
+                                    //         #aaeaac,
+                                    //         #aeeeb0
+                                    //     );
+                                    // }
 
-                                    &.tactile_two {
-                                        border-color: #b1f3b3;
-                                        box-shadow: #baffbc -6px -6px 13px,
-                                            #94cb96 6px 6px 13px;
-                                        background: linear-gradient(
-                                            145deg,
-                                            #9dd79e,
-                                            #bbffbe
-                                        );
-                                    }
+                                    // &.tactile_two {
+                                    //     border-color: #b1f3b3;
+                                    //     box-shadow: #baffbc -6px -6px 13px,
+                                    //         #94cb96 6px 6px 13px;
+                                    //     background: linear-gradient(
+                                    //         145deg,
+                                    //         #9dd79e,
+                                    //         #bbffbe
+                                    //     );
+                                    // }
 
-                                    &.tactile_three {
-                                        border-color: #b1f3b3;
-                                        box-shadow: #baffbc -6px -6px 13px,
-                                            #94cb96 6px 6px 13px;
-                                        background: linear-gradient(
-                                            145deg,
-                                            #bbffbe,
-                                            #a0dba2
-                                        );
-                                    }
+                                    // &.tactile_three {
+                                    //     border-color: #b1f3b3;
+                                    //     box-shadow: #baffbc -6px -6px 13px,
+                                    //         #94cb96 6px 6px 13px;
+                                    //     background: linear-gradient(
+                                    //         145deg,
+                                    //         #bbffbe,
+                                    //         #a0dba2
+                                    //     );
+                                    // }
 
-                                    &.tactile_four {
-                                        border-color: #b1f3b3;
-                                        box-shadow: #0000000a -6px -6px 13px
-                                                inset,
-                                            #00000026 6px 6px 13px inset;
-                                        background: linear-gradient(
-                                            145deg,
-                                            #aaeaac00,
-                                            #aeeeb000
-                                        );
-                                    }
+                                    // &.tactile_four {
+                                    //     border-color: #b1f3b3;
+                                    //     box-shadow: #0000000a -6px -6px 13px
+                                    //             inset,
+                                    //         #00000026 6px 6px 13px inset;
+                                    //     background: linear-gradient(
+                                    //         145deg,
+                                    //         #aaeaac00,
+                                    //         #aeeeb000
+                                    //     );
+                                    // }
                                 }
                             }
                         }
@@ -1213,30 +1213,30 @@ section {
                     overflow: hidden;
                 }
 
-                &.tactile_one {
-                    border-color: #b1f3b3;
-                    box-shadow: #baffbc -6px -6px 13px, #94cb96 6px 6px 13px;
-                    background: linear-gradient(145deg, #aaeaac, #aeeeb0);
-                }
+                // &.tactile_one {
+                //     border-color: #b1f3b3;
+                //     box-shadow: #baffbc -6px -6px 13px, #94cb96 6px 6px 13px;
+                //     background: linear-gradient(145deg, #aaeaac, #aeeeb0);
+                // }
 
-                &.tactile_two {
-                    border-color: #b1f3b3;
-                    box-shadow: #baffbc -6px -6px 13px, #94cb96 6px 6px 13px;
-                    background: linear-gradient(145deg, #9dd79e, #bbffbe);
-                }
+                // &.tactile_two {
+                //     border-color: #b1f3b3;
+                //     box-shadow: #baffbc -6px -6px 13px, #94cb96 6px 6px 13px;
+                //     background: linear-gradient(145deg, #9dd79e, #bbffbe);
+                // }
 
-                &.tactile_three {
-                    border-color: #b1f3b3;
-                    box-shadow: #baffbc -6px -6px 13px, #94cb96 6px 6px 13px;
-                    background: linear-gradient(145deg, #bbffbe, #a0dba2);
-                }
+                // &.tactile_three {
+                //     border-color: #b1f3b3;
+                //     box-shadow: #baffbc -6px -6px 13px, #94cb96 6px 6px 13px;
+                //     background: linear-gradient(145deg, #bbffbe, #a0dba2);
+                // }
 
-                &.tactile_four {
-                    border-color: #b1f3b3;
-                    box-shadow: #0000000a -6px -6px 13px inset,
-                        #00000026 6px 6px 13px inset;
-                    background: linear-gradient(145deg, #aaeaac00, #aeeeb000);
-                }
+                // &.tactile_four {
+                //     border-color: #b1f3b3;
+                //     box-shadow: #0000000a -6px -6px 13px inset,
+                //         #00000026 6px 6px 13px inset;
+                //     background: linear-gradient(145deg, #aaeaac00, #aeeeb000);
+                // }
             }
         }
     }
@@ -1296,30 +1296,30 @@ section {
                     overflow: hidden;
                 }
 
-                &.tactile_one {
-                    border-color: #b1f3b3;
-                    box-shadow: #baffbc -6px -6px 13px, #94cb96 6px 6px 13px;
-                    background: linear-gradient(145deg, #aaeaac, #aeeeb0);
-                }
+                // &.tactile_one {
+                //     border-color: #b1f3b3;
+                //     box-shadow: #baffbc -6px -6px 13px, #94cb96 6px 6px 13px;
+                //     background: linear-gradient(145deg, #aaeaac, #aeeeb0);
+                // }
 
-                &.tactile_two {
-                    border-color: #b1f3b3;
-                    box-shadow: #baffbc -6px -6px 13px, #94cb96 6px 6px 13px;
-                    background: linear-gradient(145deg, #9dd79e, #bbffbe);
-                }
+                // &.tactile_two {
+                //     border-color: #b1f3b3;
+                //     box-shadow: #baffbc -6px -6px 13px, #94cb96 6px 6px 13px;
+                //     background: linear-gradient(145deg, #9dd79e, #bbffbe);
+                // }
 
-                &.tactile_three {
-                    border-color: #b1f3b3;
-                    box-shadow: #baffbc -6px -6px 13px, #94cb96 6px 6px 13px;
-                    background: linear-gradient(145deg, #bbffbe, #a0dba2);
-                }
+                // &.tactile_three {
+                //     border-color: #b1f3b3;
+                //     box-shadow: #baffbc -6px -6px 13px, #94cb96 6px 6px 13px;
+                //     background: linear-gradient(145deg, #bbffbe, #a0dba2);
+                // }
 
-                &.tactile_four {
-                    border-color: #b1f3b3;
-                    box-shadow: #0000000a -6px -6px 13px inset,
-                        #00000026 6px 6px 13px inset;
-                    background: linear-gradient(145deg, #aaeaac00, #aeeeb000);
-                }
+                // &.tactile_four {
+                //     border-color: #b1f3b3;
+                //     box-shadow: #0000000a -6px -6px 13px inset,
+                //         #00000026 6px 6px 13px inset;
+                //     background: linear-gradient(145deg, #aaeaac00, #aeeeb000);
+                // }
             }
         }
     }
